--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </nav>
 
     <h1>Welcome to PWA</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit quos veniam accusantium eligendi ea sit aliquam magnam laudantium nisi facilis porro iste quibusdam tempore, expedita id laboriosam minus eveniet commodi. Inventore voluptas aut sapiente voluptatem magni doloremque quo pariatur id vitae, tempora modi dolores rem corporis cum deleniti reiciendis.</p>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" ></script>
